# cub3d

./: .gitignore  CMakeLists.txt  Makefile  a.out  check.c  cub  cub3d.c  cub3d.h  cub_window.c  errors_ident.c  ident.c  ident_parce.c  identifier.c  map.cub  parcer.c  theory.txt  valid_map.c
gnl/: Makefile  get_next_line.c  get_next_line.h  get_next_line_utils.c
include/: cub3d.h
libft/: Makefile  ft_lstadd_back.c  ft_lstdelone.c  ft_strlen.c  libft.h
libft/src/: ft_strdup.c
maps/: map.cub
mlx/: mlx.h
src/: bmp.c  color.c  cub3d.c  cub_window.c  draw_sprite.c  error.c  events.c  file_parce.c  free.c  gnl.c  ident.c  ident_parce.c  init.c  main.c  manage.c  map.c  map_ch_check.c  move.c  parcer.c  player.c  ray.c  raycasting for walls.c  render.c  resolution.c  screen.c  sprite.c  struct_parce.c  texture.c  texturisation.c  turn.c  utils_gnl.c  valid_input.c  valid_map.c
src/done/: init.c  manage.c  move.c  ray.c  screen.c
src/done/parce/: color.c  error.c  file_parce.c  map.c  player.c  resolution.c  texture.c  valid_input.c
src/done/utils/: gnl.c
src/parce/: file_parce.c  valid_input.c
src/parce/identifiers/: color.c  ident_parce.c  resolution.c  texture.c
src/parce/map/: map.c  player.c  symbol_check.c  tmp_map.c
src/parse/: gnl.c  parse_ceilling_floor_color.c  parse_file.c  parse_info_fields.c  parse_map.c  parse_texture.c  utils.c  valid_input.c
src/screen/: draw_sprite.c  move.c  ray_walls.c  raycasting.c  screen.c  sprite.c  texturisation.c  turn.c
src/utils/: bmp.c  create_bmp.c  err_exit.c  init_struct.c  manage.c
textures/: north_meme.xpm  south_meme.xpm  sprite_meme.xpm  west_meme.xpm
